forget password and change password added.

--- a/biletixx_website/accounts/templates/registration/profile.html
+++ b/biletixx_website/accounts/templates/registration/profile.html
@@ -4,6 +4,8 @@
 {% block content %}
 
 <h2>PROFILE PAGE HERE</h2>
+<br/>
 
+<a href="{% url 'password_change' %}">change password</a>
 
 {% endblock %}
