--- a/biletixx_website/accounts/templates/registration/login.html
+++ b/biletixx_website/accounts/templates/registration/login.html
@@ -304,7 +304,7 @@ form:after {
           
         <div>
         <input type="submit" value="Log in" />
-        <a href="#">Lost your password?</a>
+        <a href="{% url 'password_reset' %}">Reset Password </a>
         <a href="{% url 'signup' %}">Register</a>
       </div>
       </form>
