--- a/biletixx_website/events/templates/events/search.html
+++ b/biletixx_website/events/templates/events/search.html
@@ -1,13 +1,45 @@
 {% extends 'events/base.html' %}
 
 {% block content %}
-  <form method="get">
-    {{ filter.form.as_p }}
-    <button type="submit">Search</button>
-  </form>
-  <ul>
-  {% for event in filter.qs %}
-    <li>{{ event.name }} - {{ event.eventtype }}</li>
-  {% endfor %}
-  </ul>
+<br>
+<div class="row">
+	<div class="col">
+		<div class="card card-body">
+
+			<form method="get">
+				{{event_filter.form}}
+				
+
+		    <button class="btn btn-primary" type="submit">Search</button>
+		  </form>
+
+		</div>
+	</div>
+	
+</div>
+<br>
+
+<div class="row">
+	<div class="col-md">
+		<div class="card card-body">
+			<table class="table table-sm">
+				<tr>
+					<th>Event Name</th>
+					
+				</tr>
+
+				{% for event in event_list %}
+
+				<tr>
+					<td>{{event.name}}</td>
+					
+					
+				</tr>
+				{% endfor %}
+
+			</table>
+		</div>
+	</div>
+</div>
+ 
 {% endblock %}
