--- a/biletixx_website/events/templates/events/navbar.html
+++ b/biletixx_website/events/templates/events/navbar.html
@@ -8,10 +8,11 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
          <li class="nav-item">
-    <a class="nav-link" href="{% url 'search' %}">Search</a>
+    <a class="nav-link" href="{% url 'list_events' %}">Search</a>
+    
   </li>
        
-    
+    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
         
       </ul>
      ,
