--- a/biletixx_website/events/templates/events/list_eventholder_events.html
+++ b/biletixx_website/events/templates/events/list_eventholder_events.html
@@ -3,7 +3,7 @@
 {% block content %}
   
   <h2>All Events</h2>
-  <p1>You can only delete events created by you.</p1>
+  <p1>You can only see and delete events created by you.</p1>
   <br/>
 
   {% for event in event_list %}
@@ -20,7 +20,10 @@
 
 <li>Event Type: {{ event.eventtype }}</li>
 <li>Event Date: {{ event.date}}</li>
+<li>Event Hour: {{ event.hour }}</li>
+<li>Event Venue: {{ event.venue }}</li>
 <li>Description: {{ event.description }}</li>
+<li>Created by: {{ event.manager }}</li>
   
   </ul>
 
@@ -34,6 +37,7 @@
         
 
         <a href="{% url 'delete_event' event.id %}" class="btn btn-outline-danger btn-sm">Delete Event</a>
+        <a href="{% url 'update_event' event.id %}" class="btn btn-outline-danger btn-sm">Edit Event</a>
         
       </div>
  
