--- a/biletixx_website/events/templates/events/show_event.html
+++ b/biletixx_website/events/templates/events/show_event.html
@@ -41,7 +41,8 @@ div {
 </center>
 
 
-<a href="{% url 'booking_view'  %}">Create/Book Ticket</a>    
+<a href="{% url 'buy_ticket'   %}">Buy Ticket</a>
+   
 
 {% endblock %}
 
