--- a/biletixx_website/events/templates/events/home.html
+++ b/biletixx_website/events/templates/events/home.html
@@ -1,6 +1,7 @@
 {% extends 'events/base.html' %}
 
 <html>
+
  <head>
 
  	</head>
@@ -9,21 +10,56 @@
 
 
 {% block content %}
-
-<h1> Welcome to the Biletixx website </h1>
-
-
-{% if user.is_authenticated %}
+<header class="w3-container w3-gray w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">Welcome to Biletixx website!</h1>
+  
+  {% if user.is_authenticated %}
   Hi {{ user.username }}!
   <p><a href="{% url 'logout' %}">Log Out</a></p>
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">Log In</a>
 {% endif %}
+ 
+</header>
+
+<!-- First Grid -->
+
+
+<!-- Second Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <i class="fa fa-ticket w3-padding-64 w3-text-red w3-margin-right"></i>
+    </div>
+
+    <div class="w3-twothird">
+      
+      <h5 class="w3-padding-32">Our website lets you buy tickets for events easily.</h5>
+
+      <p class="w3-text-grey">You can search tickets fo events. You can easily create an account for your yourself on the website. After you create your account you can login and buy tickets for the event you want.</p>
+    </div>
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity">  
+  <div class="w3-xlarge w3-padding-32">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+ </div>
+ 
+</footer>
+
+
 
 <br/>
 
-       
+      
 
 {% endblock %}
 
