--- a/biletixx_website/events/templates/events/my_tickets.html
+++ b/biletixx_website/events/templates/events/my_tickets.html
@@ -1,61 +1,49 @@
+
+
+
+
+
 {% extends 'events/base.html' %}
 
-<html>
- <head>
-
- 	</head>
-
- 	 <body>
-
-
 {% block content %}
+  
+  <h2>All Tickets</h2>
+  <p1>You can see and cancel your tickets here.</p1>
+  <br/>
+
+  {% for ticket in tickets %}
+
+    <div class="card">
+  <div class="card-header">
+    
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">My Ticket</h5>
+    <p class="card-text">
+      <ul>
+<li>Ticket for the Event: : {{ ticket.event  }}</li>
+
+
+  
+  </ul>
 
 
 
+    </p>
+  </div>
+ 
+      <div class="card-footer text-muted">
+        
+        
 
-<div class="page-header"><h1>Tickets assigned to myself</h1></div>
-
-    <table id="assigned" class="table table-striped table-bordered" cellspacing="0" width="100%">
-        <thead>
-        <tr>
-            
-            
-            <th>Price</th>
-            <th>Ticket Name</th>
-            
-            
-        </tr>
-        </thead>
-
-        <tbody>
-    {% for booking in bookings %}
-        <tr>
-            
-            
-            
-            <td>{{ booking.ticket.price }}</td>
-            <td>{{ booking.ticket.ticketname }}</td>
-            
-            
-        </tr>
-    {% endfor %}
-
-
-        </tbody>
-    </table>
-
-
-    </div>
+        <a href="{% url 'delete_ticket' ticket.id %}" class="btn btn-outline-danger btn-sm">Cancel Ticket</a>
+        
+        
+      </div>
+ 
 </div>
 
-
-
-       
-
+{% endfor %}
+  
+  
 {% endblock %}
-
-</body>
-
-
-
-</html>
