buy_ticket added

--- a/biletixx_website/events/templates/events/buy_ticket.html
+++ b/biletixx_website/events/templates/events/buy_ticket.html
@@ -9,15 +9,15 @@
 
  	 <body>
 
+{{ total_cost }}
+
+
 
 {% block content %}
 
 {% for ticket in ticket_list %}
 
 <h2> {{ticket.event.price}}</h2>
-
-
-
 
 
 
