--- a/biletixx_website/events/templates/events/show_event.html
+++ b/biletixx_website/events/templates/events/show_event.html
@@ -41,7 +41,7 @@ div {
 </center>
 
 
-<a href="{% url 'buy_ticket'   %}">Buy Ticket</a>
+<a href="{% url 'buy_ticket' event.id  %}">Buy Ticket</a>
    
 
 {% endblock %}
