last changes before beta
Co-Authored-By: ccansaygili <73293289+ccansaygili@users.noreply.github.com>
Co-Authored-By: Betül Akgül <76072632+betulAkgull@users.noreply.github.com>
Co-Authored-By: Nazlı Uysal <61649033+NazliUysal@users.noreply.github.com>

--- a/biletixx_website/accounts/templates/registration/address_list.html
+++ b/biletixx_website/accounts/templates/registration/address_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   
-  <h2>Your Addresses s</h2>
+  <h2>Your Addresses </h2>
   <p1>You can see your addresses here.</p1>
   <br/>
 
