--- a/biletixx_website/accounts/templates/registration/user_list.html
+++ b/biletixx_website/accounts/templates/registration/user_list.html
@@ -2,25 +2,79 @@
 
 
 {% block content %}
-<h2>Users</h2>
-<table style="width:60%;">
-  <tr>
-    <th>User Name</th>
-    <th>Email</th>
-    <th>First Name</th>
-      <th>Last Name</th>
-       <th></th>
-  </tr>
 
-{% for u in list %}
+
+
+  <h2>All USERS</h2>
+  <p1>You can  see and delete users.</p1>
+  <br/>
+
+ {% for u in list %}
+ {% if  u.is_superuser %}
+  <td> </td>
+{% else %}
+
+</br>
+    <div class="card">
+  <div class="card-header">
+    
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">UserName:{{u.username}}</h5>
+    <p class="card-text">
+      <ul>
+
+
+
+
     <tr>
-    <td>{{u.username}}</td>
-    <td>{{u.email}}</td>
-    <td>{{u.first_name}}</td>
-     <td>{{u.last_name}}</td>
-          <td><a href="{%url 'user_delete' pk=u.email %}">Delete</a></td>
+    
+    <li>{{u.email}}</li>
+    <li>{{u.first_name}}</li>
+     <li>{{u.last_name}}</li>
+{% if u.is_registereduser %}
+     <li>registered user</li>
+     {% endif %}
+{% if u.is_eventholder %}
+     <li>eventholder</li>
+     {% endif %}
+
+
+     {% endif %}
+
+     
+   
   </tr>
 <p></p>
+
+  
+  </ul>
+
+
+
+    </p>
+  </div>
+ 
+      <div class="card-footer text-muted">
+        
+         {% if  u.is_registereduser or u.is_eventholder %}
+
+<a href="{% url 'user_delete' pk=u.email%}" class="btn btn-outline-danger btn-sm">Delete</a>
+             {% endif %}
+       
+        
+        
+      </div>
+ 
+</div>
+
+</br>
+
 {% endfor %}
 
+
+
 {% endblock %}
+
+
+
