--- a/biletixx_website/accounts/templates/registration/login.html
+++ b/biletixx_website/accounts/templates/registration/login.html
@@ -305,7 +305,7 @@ form:after {
           
         <div>
         <input type="submit" value="Log in" />
-        <a href="{% url 'password_reset' %}">Reset Password </a>
+        <a href="{% url 'password_reset' %}">Forget Password(Reset) </a>
         <a href="{% url 'signup' %}">Register</a>
       </div>
       </form>
