--- a/biletixx_website/events/templates/events/list_events.html
+++ b/biletixx_website/events/templates/events/list_events.html
@@ -33,6 +33,7 @@
 					<th>Event Hour</th>
 					<th>Event Venue</th>
 					<th>Event Price</th>
+					<th>Event Manager</th>
                     
 					
 				</tr>
@@ -48,6 +49,7 @@
 					<td> {{event.hour}} </td>
 					<td> {{event.venue}} </td>
 					<td> {{event.price}} </td>
+					<td> {{event.manager}} </td>
 
 					
 
