--- a/biletixx_website/events/templates/events/my_tickets.html
+++ b/biletixx_website/events/templates/events/my_tickets.html
@@ -25,6 +25,7 @@
 <li>Ticket Date:  {{ ticket.event.date  }}</li>
 <li>Ticket Hour:  {{ ticket.event.hour  }}</li>
 <li>Ticket Venue:  {{ ticket.event.venue  }}</li>
+<li>Ticket Price:  {{ ticket.event.price  }}</li>
 
 
 
