fulltest,refund added,date control updated
full test file:
-date control for add event, edit event
-refund after an event is deleted
-buy ticket improved

--- a/biletixx_website/accounts/templates/registration/user_list.html
+++ b/biletixx_website/accounts/templates/registration/user_list.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-{{ eventsbythatuser }}
+<!--{{ eventsbythatuser }}-->
   <h2>All USERS</h2>
   <p1>You can  see and delete users.</p1>
   <br/>
