--- a/biletixx_website/events/templates/events/buy_ticket_info.html
+++ b/biletixx_website/events/templates/events/buy_ticket_info.html
@@ -117,7 +117,7 @@ span.price {
 <div class="row">
   <div class="col-75">
     <div class="container">
-      <form action="{% url 'checkout'  %}">
+      <form action="{% url 'buy_ticket_info'  %}">
       
         <div class="row">
           <div class="col-50">
