--- a/biletixx_website/events/templates/events/list_eventholder_events.html
+++ b/biletixx_website/events/templates/events/list_eventholder_events.html
@@ -2,6 +2,7 @@
 
 {% block content %}
   
+  {{tickettobedeleted}}
   <h2>All Events</h2>
   <p1>You can only see and delete events created by you.</p1>
   <br/>
